# mkdocs-decodiff-plugin

./: .editorconfig  .gitattributes  .gitignore  pyproject.toml
docs/: README.md
docs/dev/: README.md
scripts/: .env.template  build.sh  pytest-watch.sh  test-pypi.sh  upload-to-pypi.sh
src/decodiff/: __init__.py
src/decodiff/mkdocs_plugin/: plugin.py
src/decodiff/mkdocs_plugin/assets/: decodiff.css
src/markdiff/: __init__.py  __main__.py  markdiff.py  markdown_marker.py  mkdocs_plugin.py
src/markdiff/_git_diff/: __init__.py
src/markdiff/mkdocs_plugin/: plugin.py
src/markdiff/mkdocs_plugin/assets/: markdiff.css
src/mkdocs_decodiff_plugin/: decodiff.py  markdown_marker.py
src/mkdocs_decodiff_plugin/mkdocs_plugin/: plugin.py
tests/: test_cli.py  test_markdiff.py
tests/_res/: file1.md
tests/_res/subdir/: file2.md  file3-rm.md
tests/e2e-mkdocs/: mkdocs.yml
tests/unit/: test_mark_markdown_line.py  test_parse_unified_diff.py
